--- a/Resources/public/scss/modules/universal-discovery/_tab.selector.scss
+++ b/Resources/public/scss/modules/universal-discovery/_tab.selector.scss
@@ -5,9 +5,11 @@
         align-items: center;
         padding-left: calculateRem(16px);
         cursor: pointer;
+        font-size: calculateRem(14px);
 
         .ez-icon {
             margin-right: calculateRem(4px);
+            fill: $ez-color-base-medium;
         }
 
         &--selected {
