--- a/Resources/public/scss/modules/universal-discovery/_breadcrumbs.scss
+++ b/Resources/public/scss/modules/universal-discovery/_breadcrumbs.scss
@@ -84,6 +84,7 @@
     &__list-item {
         max-width: calc(100% / 3);
         display: flex;
+        font-size: calculateRem(12px);
 
         &--last {
             .c-breadcrumbs__list-item-text {
