--- a/Resources/public/scss/modules/universal-discovery/_main.scss
+++ b/Resources/public/scss/modules/universal-discovery/_main.scss
@@ -6,6 +6,12 @@
     left: 0;
     height: 100vh;
     width: 100vw;
+
+    .c-thumbnail {
+        .ez-icon {
+            fill: $ez-color-base-medium;
+        }
+    }
 }
 
 .ez-is-branch-resizing {
