EZP-31345 Added language select when user edit sub items

--- a/Resources/public/scss/modules/sub-items-list/_table.view.item.scss
+++ b/Resources/public/scss/modules/sub-items-list/_table.view.item.scss
@@ -91,6 +91,19 @@
                 transition: transform 0.4s ease-in, opacity 0.4s ease-in;
             }
         }
+
+        .ez-instant-filter {
+            &__items {
+                margin-top: calculateRem(5px);
+                max-height: calc(100vh - #{calculateRem(220px)});
+                overflow: auto;
+
+                .form-check-label {
+                    font-size: calculateRem(16px);
+                    line-height: calculateRem(50px);
+                }
+            }
+        }
     }
 
     &__inner-wrapper {
