--- a/Resources/public/scss/modules/universal-discovery/_content.meta.preview.scss
+++ b/Resources/public/scss/modules/universal-discovery/_content.meta.preview.scss
@@ -71,12 +71,23 @@
     }
 
     &__language-selector {
+        background-color: $ez-white;
         position: absolute;
         right: 100%;
         top: 0;
         height: 100%;
         width: calculateRem(360px);
         box-shadow: calculateRem(-2px) calculateRem(4px) calculateRem(6px) 0 rgba(135, 135, 135, 0.35);
+        transform: scaleX(1);
+        transform-origin: right center;
+        opacity: 1;
+        transition: all 0.4s ease-in;
+
+        &--hidden {
+            transform: scaleX(0);
+            opacity: 0;
+            transition: all 0.2s ease-out;
+        }
 
         .ez-icon {
             fill: $ez-color-base-medium;
