--- a/Resources/public/scss/modules/universal-discovery/_selected.locations.scss
+++ b/Resources/public/scss/modules/universal-discovery/_selected.locations.scss
@@ -7,8 +7,10 @@
     width: calculateRem(60px);
     box-shadow: 0 calculateRem(2px) calculateRem(4px) 0 rgba(0, 0, 0, 0.45);
     z-index: 1;
+    transition: all 0.2s ease-out;
 
     &--expanded {
+        transition: all 0.4s ease-in;
         width: calculateRem(300px);
         box-shadow: calculateRem(2px) calculateRem(2px) calculateRem(4px) 0 rgba(0, 0, 0, 0.45);
 
