After code review

--- a/Resources/public/scss/modules/_sub.items.list.scss
+++ b/Resources/public/scss/modules/_sub.items.list.scss
@@ -6,6 +6,7 @@
 @import 'sub-items-list/table.view.columns.toggler';
 @import 'sub-items-list/table.view.item';
 @import 'sub-items-list/table.view';
+@import 'sub-items-list/language.selector';
 @import 'sub-items-list/view.switcher.button';
 @import 'sub-items-list/view.switcher';
 @import 'sub-items-list/main';
