After code review

--- a/Resources/public/scss/modules/sub-items-list/_language.selector.scss
+++ b/Resources/public/scss/modules/sub-items-list/_language.selector.scss
@@ -1,4 +1,4 @@
-.ez-language-selector {
+.c-language-selector {
     .ez-instant-filter {
         &__items {
             margin-top: calculateRem(5px);
@@ -12,5 +12,3 @@
         }
     }
 }
-
-
