EZEE-2985: added class for create button

--- a/Resources/public/scss/modules/sub-items-list/_action.btn.scss
+++ b/Resources/public/scss/modules/sub-items-list/_action.btn.scss
@@ -18,6 +18,16 @@
         opacity: 0.3;
     }
 
+    &--create {
+        border: calculateRem(1px) solid $ez-color-primary;
+        background: $ez-color-primary;
+
+        &:not(.c-action-btn--disabled):hover,
+        &:not(.c-action-btn--disabled):focus {
+            background: $ez-color-primary-hover;
+        }
+    }
+
     &--move,
     &--hide,
     &--reveal,
