--- a/Resources/public/scss/modules/_universal.discovery.scss
+++ b/Resources/public/scss/modules/_universal.discovery.scss
@@ -4,6 +4,7 @@
 @import 'universal-discovery/content.create';
 @import 'universal-discovery/content.create.widget';
 @import 'universal-discovery/content.create.button';
+@import 'universal-discovery/content.edit.button';
 @import 'universal-discovery/sort.switcher';
 @import 'universal-discovery/view.switcher';
 @import 'universal-discovery/menu.button';
