EZP-31070: added empty message for udw

--- a/Resources/public/scss/modules/universal-discovery/_finder.scss
+++ b/Resources/public/scss/modules/universal-discovery/_finder.scss
@@ -8,4 +8,11 @@
             margin-left: calculateRem(16px);
         }
     }
+
+    &__no-content-info {
+        padding-top: calculateRem(39px);
+        padding-left: calculateRem(36px);
+        font-size: calculateRem(25px);
+        color: $ez-color-base-light;
+    }
 }
