--- a/Resources/public/scss/modules/universal-discovery/_bookmarks.scss
+++ b/Resources/public/scss/modules/universal-discovery/_bookmarks.scss
@@ -7,7 +7,7 @@
         padding-top: calculateRem(15px);
         padding-left: calculateRem(20px);
         font-size: calculateRem(25px);
-        color: #a6a6a6;
+        color: $ez-color-base-light;
     }
 
     &__loading-spinner {
